<resources>
    <string name="vitamio_theme_app_name">VPlayer codec</string>
    <string name="VideoView_error_title">Cannot play video</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Sorry, this video is not valid for streaming to this device.</string>
    <string name="VideoView_error_text_unknown">Sorry, this video cannot be played.</string>
    <string name="VideoView_error_button">OK</string>
    <string name="mediacontroller_play_pause">Play/Pause</string>
    
    <string name="app_name">Iptv</string>
    <string name="channel_title">channel</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="settings">"Settings"</string>
    <string name="decode_open">SW decoder active</string>
    <string name="decode_close">SW decoder inactive</string>
    <string name="user">User name:</string>
    <string name="user_name">User name:</string>
    <string name="user_password">Password:</string>
    <string name="user_confirm">OK</string>
    <string name="user_cancle">Cancel</string>
    <string name="input">Please input</string>
    <string name="title_activity_main">Iptv</string>
    <string name="first_item">First channel</string>
    <string name="last_item">Last channel</string>
    <string name="path_null">Invalid URL</string>
    <string name="error">Can not play</string>
    <string name="load_next_channel">Loading next channel</string>
    <string name="load_pre_channel">Loading previous channel</string>
    <string name="load_channel">"Loading:"</string>
    <string name="select_channel_palying_now">Playing</string>
    <string name="init_decoders">Initializing decoder</string>
    <string name="net_not_work">Network failed</string>
    <string name="error_path">Can not play URL</string>
    <string name="pre_page">Previous</string>
    <string name="next_page">Next</string>
    <string name="first_page">First page</string>
    <string name="last_page">Last page</string>
    <string name="playing_channel">Playing channel</string>
    <string name="pull_error">Read data error</string>
    <string name="zoom_full_screen">Full screen play</string>
    <string name="zoom_normal">Normal play</string>
    
</resources>
