<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/main_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView 
	    android:id="@+id/tv_channe_title_main"
	    android:layout_marginTop="30dip"
	    android:layout_marginLeft="80dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/channel_title"
	    android:textSize="23sp"
	    android:textColor="@android:color/background_light"
	    />
	<ListView 
	    android:id="@+id/lv_main"
		style="@style/ListView"
	    />
	<GridView
	    android:id="@+id/gv_main"
	    android:layout_marginRight="35dip"
	    android:layout_marginLeft="30dip"
	    android:layout_marginTop="130dip"
	    android:layout_toRightOf="@+id/lv_main"
	    android:layout_width="match_parent"
	    android:layout_height="530dip"
	    android:numColumns="3"
	    android:listSelector="@android:color/transparent"
	    android:verticalSpacing="15dip"
	    android:horizontalSpacing="40dip"
	    android:scrollbars="none"
	    />
	<TextView 
	    android:id="@+id/tv_user_name_main"
	    android:layout_below="@id/gv_main"
	    android:layout_alignLeft="@id/gv_main"
	    android:layout_marginTop="30dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:clickable="true"
	    android:visibility="gone"
	    />
	<Button 
	    android:id="@+id/btn_main_next"
	    android:layout_below="@id/gv_main"
	    android:layout_marginTop="30dip"
	    android:layout_marginRight="120dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/next_page"
	    android:layout_alignParentRight="true"
	    android:visibility="gone"
	    />
	<Button 
	    android:id="@+id/btn_main_pre"
	    android:layout_alignTop="@+id/btn_main_next"
	    android:layout_toLeftOf="@id/btn_main_next"
	    android:layout_marginRight="30dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/pre_page"
	    android:visibility="gone"
	    />
	<Button 
	    android:id="@+id/btn_main_decode"
	    android:layout_below="@id/gv_main"
	    android:layout_marginTop="30dip"
	    android:layout_marginRight="120dip"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/next_page"
	    android:layout_alignParentRight="true"
	    android:visibility="gone"
	    />
	
</RelativeLayout>
